# clock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.h  BasicBitmapLoader.cpp  BasicBitmapLoader.h  DebugTextureProvider.cpp  DebugTextureProvider.h  ITextureDataProvider.h  Widget.cpp  Widget.h  cmake_defs.h.in  frag.hlsl  main.cpp  pack_shaders_to_cpp.cmake  res.h  res.rc  vert.hlsl
